# CRUSP

./: .dockerignore  Dockerfile_Server  README.md  docker-compose.yml  docker_build_measurement_server.sh  docker_run_mesurement_server.sh  license.txt  pom.xml
CRUSP/measurement_shared_rust/: Cargo.toml  README.md
CRUSP/measurement_shared_rust/src/: crusp_error.rs
measurement_client_rust/: Cargo.toml  README.md
measurement_client_rust/src/: crusp_client.rs
measurement_client_standalone/: .gitignore  Cargo.toml  run_experiments.sh
measurement_client_standalone/output/: CRUSP Workbook.xlsx  analysis.py  downlink_2-6-23-base  downlink_2-6-23-inside-no-los  downlink_2-6-23-right-outside  downlink_23_lab  downlink_line_of_sight_inside_lab  downlink_right_outside_lab  downlink_rtest-1  downlink_rtest-3  downlink_wired_competing_same  downlink_wireless_competing_same  downlink_wireless_inside_lab_no_LOS  downlink_wireless_no_competing  iperf-2-6-23-base  iperf-2-6-23-insidelos  iperf-2-6-23-right-outside  uplink_2-6-23-base  uplink_2-6-23-inside-no-los  uplink_2-6-23-right-outside  uplink_23_lab  uplink_line_of_sight_inside_lab  uplink_right_outside_lab  uplink_rtest-3  uplink_wired_competing  uplink_wireless_inside_lab_no_LOS  wired_iperf3.txt  wireless_iperf3.txt
measurement_client_standalone/output/competing/: downlink_wired_competing  downlink_wired_no_competing  uplink_wired_competing_same  uplink_wired_no_competing
measurement_client_standalone/output/distance-based/: CRUSP Distance-Based Measures.xlsx  downlink_rtest-2  iperf-2-6-23-inside-no-los  iperf-test-1  iperf-test-2  iperf-test-3  iperf-test-4  uplink_2-6-23-inside-los  uplink_rtest-1  uplink_rtest-2  uplink_rtest-4
measurement_client_standalone/output/mcs/: downlink_ht_mcs_10_43.3  downlink_ht_mcs_2_21.7  iperf_ht_mcs_10_43.3  iperf_ht_mcs_1_14.4  iperf_ht_mcs_2_21.7  iperf_ht_mcs_5_57.8  iperf_vht_mcs_1_nss_1  iperf_vht_mcs_1_nss_2  iperf_vht_mcs_5_nss_1  iperf_vht_mcs_9_nss_2  uplink_ht_mcs_5_57.8  uplink_vht_mcs_1_nss_1  uplink_vht_mcs_5_nss_1  (+1 more)
measurement_client_standalone/src/: main.rs
measurement_server/: .gitignore  Cargo.toml  README.md  Rocket.toml
measurement_server/src/: main.rs
(+266 files in other folders)
