[package]
name = "measurement_service"
version = "0.1.0"
authors = ["whofer"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde_json = "1.0.39"
serde = {version = "1.0.89", features = ["derive"]}
rocket_contrib = "0.4.0"
log = "0.4.6"
rand = "0.7.0"
measurement_shared_rust = {path = "../measurement_shared_rust"}
net2 = "0.2.33"
eureka-client = "0.0.4"
env_logger = "0.6.2"
reqwest = "0.9.19"
duct_sh = "0.1.0"

[dependencies.minreq]
version="2.6.0"
features=["json-using-serde"]