[package]
name = "measurement_shared_rust"
version = "0.1.0"
authors = ["whofer"]
edition = "2018"

[dependencies]
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.39"
jni = { version = "0.12", default-features = false }
rand = "0.7.0"
byteorder = "1.3.1"
log = "0.4.6"


[dependencies.reqwest]
version = "0.9.13"
default-features=false
#features=["rustls-tls"]

[dependencies.minreq]
version="2.6.0"
features=["json-using-serde"]